# trtx-rs

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  RUSTNN_INTEGRATION.md
.githooks/: README.md  install.ps1  install.sh  pre-commit
.github/: GPU_RUNNER_SETUP.md
.github/workflows/: ci.yml  gpu-tests.yml  publish.yml
trtx/: Cargo.toml
trtx-sys/: Cargo.toml  build.rs  mock.c  wrapper.cpp  wrapper.hpp
trtx-sys/src/: lib.rs
trtx/examples/: basic_workflow.rs  rustnn_executor.rs
trtx/src/: builder.rs  cuda.rs  error.rs  executor.rs  lib.rs  logger.rs  onnx_parser.rs  runtime.rs
