[workspace]
members = ["trtx-sys", "trtx"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Tarek Ziade"]
repository = "https://github.com/tarekziade/trtx-rs"

[workspace.dependencies]
trtx-sys = { path = "trtx-sys" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
