[package]
name = "trtx-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Raw FFI bindings to NVIDIA TensorRT-RTX (EXPERIMENTAL - NOT FOR PRODUCTION)"
readme = "../README.md"
links = "tensorrt-rtx"
keywords = ["tensorrt", "inference", "nvidia", "ffi"]
categories = ["external-ffi-bindings"]

[build-dependencies]
bindgen = "0.70"
cc = "1.0"

[features]
default = []
# Mock mode for development without TensorRT-RTX installed
mock = []

[dependencies]
# Raw FFI - no dependencies
