[package]
name = "trtx"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Safe Rust bindings to NVIDIA TensorRT-RTX (EXPERIMENTAL - NOT FOR PRODUCTION)"
readme = "../README.md"
keywords = ["tensorrt", "inference", "deep-learning", "nvidia", "gpu"]
categories = ["api-bindings", "science"]

[features]
default = []
# Mock mode for development without TensorRT-RTX installed
mock = ["trtx-sys/mock"]

[dependencies]
trtx-sys = { version = "0.1.0", path = "../trtx-sys", default-features = false }
thiserror = "2.0"

[dev-dependencies]
# For examples and tests
